--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,13 +31,13 @@
           <label for="password">Password</label>
         </div>
         <div class="col s11 black-text valign-wrapper">
-          <a class="waves-effect waves-light btn right red" id="login-button">Login</a>
+          <a class="waves-effect waves-light btn right red lighten-1" id="login-button">Login</a>
           <span class="right top">OR</span>
-          <a class="waves-effect waves-light btn right red" href="/register">Register</a>
+          <a class="waves-effect waves-light btn right red lighten-1" href="/register">Register</a>
         </div>
       </div>
     </div>
-    <nav>
+    <nav class="red lighten-1">
       <div class="container wider-container">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo hide-on-med-and-down">Kids these days</a>
@@ -56,7 +56,7 @@
       <br>
       {{{body}}}
     </div>
-    <footer class="page-footer">
+    <footer class="page-footer red lighten-1">
       <div class="container wider-container">
         <div class="row">
           <div class="col s12">
