--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -46,7 +46,7 @@
 
 
 <br>
-<a id="submitbutton" class="waves-effect waves-light btn">Submit Post</a>
+<a id="submitbutton" class="waves-effect waves-light btn red lighten-1">Submit Post</a>
 
 <br>
 <br>
