--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -47,8 +47,8 @@
 
 
 <br>
-<a id="submitbutton" class="waves-effect waves-light btn red lighten-1">Update Post</a>
-<a id="deletebutton" class="waves-effect waves-light btn red lighten-1">Delete Post</a>
+<a id="submitbutton" class="waves-effect waves-light btn">Update Post</a>
+<a id="deletebutton" class="waves-effect waves-light btn">Delete Post</a>
 
 <br>
 <br>
@@ -62,32 +62,6 @@
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-$(function() {
-  M.Modal.init($(".modal"));
-  $("#new-button").on("click", function(event) {
-    console.log("clicked submit");
-
-    var body = {
-      firstname: $("#new_firstname").val(),
-      lastname: $("#new_lastname").val(),
-      username: $("#new_username").val(),
-      password: $("#new_password").val(),
-      email: $("#new_email").val()
-    };
-
-    $.ajax("/api/users", {
-      type: "POST",
-      data: JSON.stringify(body),
-      contentType: "application/json"
-    })
-      .done(function() {
-        M.Modal.getInstance($("#successModal")).open();
-      })
-      .fail(function(jqXHR, textStatus) {
-        M.Modal.getInstance($("#failedModal")).open();
-      });
-  });
-});
   $("#deletebutton").click(function () {
     console.log("delete request sent")
     var postId = $("#post-id").attr("value")
@@ -99,23 +73,17 @@ $(function() {
         location.href = "/";
       })
   })
-
   $("#submitbutton").click(function () {
     var rawtitle = $("#title").val();
     var rawhtml = $("#editor-container").html()
-
     var postId = $("#post-id").attr("value")
-
     var postdata = {
       title: rawtitle,
       body: rawhtml
     }
-
     console.log(postdata)
-
  //   $.put("/api/posts/" + {{ this.body.id }}, postdata).then()
   var fullurl = "/api/posts/" + {{ this.body.id }}
-
   $.ajax({
     url: fullurl,
     type: 'PUT',
@@ -124,13 +92,7 @@ $(function() {
       window.location.replace("/");
     }
   });
-
-
-
   });
-
-
-
   // Initialize editor with custom theme and modules
   var quill = new Quill('#editor-container', {
     modules: {
@@ -140,8 +102,5 @@ $(function() {
     placeholder: 'Compose an epic...',
     theme: 'snow'
   });
-
   quill.root.innerHTML = post
-
-
 </script>
