--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -14,18 +14,12 @@
           <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src=""></a>
         </div>
         <div class="card-content">
-          <span class="card-title activator deep-orange-text text-accent-3">{{this.title}}
-            <i class="material-icons right black-text">more_vert</i></span>
+          <span class="card-title activator deep-orange-text text-accent-3">{{this.title}}</span>
           {{#if belongs}}
           <a href="/editpost/{{this.id}}">
             <p class="black-text">edit</p>
           </a>
           {{/if}}
-        </div>
-        <div class="card-reveal">
-          <span class="card-title deep-orange-text text-accent-3">{{this.title}}<i
-              class="material-icons right black-text">close</i></span>
-          <p>{{{this.body}}}</p>
         </div>
       </div>
     </div>
