--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,4 +1,13 @@
 <br>
+<div id="deleteModal" class="modal">
+  <div class="modal-content">
+    <h4>Are you sure you want to delete this post?</h4>
+    <a id="yesbutton" class="waves-effect waves-light btn red lighten-1">Delete Post</a>
+  </div>
+  <div class="modal-footer">
+    <a class="modal-close waves-effect waves-green btn-flat">Close</a>
+  </div>
+</div>
 <div id="post-id" value="{{body.id}}"></div>
 <div class="input-field col s6">
   <input id="title" type="text" class="validate" value="{{this.body.title}}">
@@ -47,8 +56,8 @@
 
 
 <br>
-<a id="submitbutton" class="waves-effect waves-light btn">Update Post</a>
-<a id="deletebutton" class="waves-effect waves-light btn">Delete Post</a>
+<a id="submitbutton" class="waves-effect waves-light btn red lighten-1">Update Post</a>
+<a id="deletebutton" class="waves-effect waves-light btn red lighten-1">Delete Post</a>
 
 <br>
 <br>
@@ -63,16 +72,22 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
   $("#deletebutton").click(function () {
-    console.log("delete request sent")
-    var postId = $("#post-id").attr("value")
-    $.ajax({
-      url: "/api/posts/" + postId,
-      type: "DELETE"
-    })
-      .done(function () {
-        location.href = "/";
+    M.Modal.init($(".modal"));
+    M.Modal.getInstance($("#deleteModal")).open();
+    $("#yesbutton").click(function () {
+      console.log("delete request sent")
+      var postId = $("#post-id").attr("value")
+      $.ajax({
+        url: "/api/posts/" + postId,
+        type: "DELETE"
       })
-  })
+        .done(function () {
+          location.href = "/";
+        })
+    })
+  });
+
+
   $("#submitbutton").click(function () {
     var rawtitle = $("#title").val();
     var rawhtml = $("#editor-container").html()
@@ -82,16 +97,16 @@
       body: rawhtml
     }
     console.log(postdata)
- //   $.put("/api/posts/" + {{ this.body.id }}, postdata).then()
-  var fullurl = "/api/posts/" + {{ this.body.id }}
-  $.ajax({
-    url: fullurl,
-    type: 'PUT',
-    data: postdata,
-    success: function (data) {
-      window.location.replace("/");
-    }
-  });
+    var fullurl = "/api/posts/" + postId
+
+    $.ajax({
+      url: fullurl,
+      type: 'PUT',
+      data: postdata,
+      success: function (data) {
+        window.location.replace("/");
+      }
+    });
   });
   // Initialize editor with custom theme and modules
   var quill = new Quill('#editor-container', {
