--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,6 +52,7 @@
             {{#if user.id}}
             <li><a href="/api/create_post">Create Activity</a></li>
             <li><a href="/api/sessions_logout">Logout</a></li>
+            <li><a href="/profile">profile</a></li>
             {{else}}
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Login</a></li>
             {{/if}}
