--- a/views/posts.handlebars
+++ b/views/posts.handlebars
@@ -11,7 +11,7 @@
     <div class="col l4 m6 s12">
       <div class="card medium">
         <div class="card-image waves-effect waves-block waves-light">
-          <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src=""></a>
+          <a href="/posts/{{this.id}}"><img id="img{{this.id}}" class="activator" src="assets/images/default.png"></a>
         </div>
         <div class="card-content">
            <span class="card-title activator deep-orange-text text-accent-3">{{this.title}}
